concluido por enquanto

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://brayanlolv.github.io/lista-de-tarefas/",
+  "homepage": "https://brayanlolv.github.io/lista-de-tarefas-react",
   "name": "my-app",
   "version": "0.1.0",
   "private": true,
